--- a/pythonProject/Chapter0913_과제.ipynb
+++ b/pythonProject/Chapter0913_과제.ipynb
@@ -421,24 +421,28 @@
    "metadata": {
     "id": "jADTPFzOHcKk",
     "ExecuteTime": {
-     "end_time": "2024-10-17T07:20:51.942579Z",
-     "start_time": "2024-10-17T07:20:51.938290Z"
+     "end_time": "2024-10-17T08:54:02.154057Z",
+     "start_time": "2024-10-17T08:54:02.150304Z"
     }
    },
    "source": [
-    "ice = {'메로나': 1000, '플로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n",
-    "print(f'메로나 가격 : {ice[\"메로나\"]}원입니다.')"
+    "ice = {'메로나': 1000,\n",
+    "       '플로포': 1200,\n",
+    "       '빵빠레': 1800,\n",
+    "       '죠스바': 1200,\n",
+    "       '월드콘': 1500}\n",
+    "print(f'메로나 가격 : {ice[\"메로나\"]}원 입니다.')"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "메로나 가격 : 1000원입니다.\n"
+      "메로나 가격 : 1000원 입니다.\n"
      ]
     }
    ],
-   "execution_count": 63
+   "execution_count": 64
   },
   {
    "cell_type": "markdown",
@@ -466,12 +470,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "id": "C2RyUgoTJKsF"
+    "id": "C2RyUgoTJKsF",
+    "ExecuteTime": {
+     "end_time": "2024-10-17T08:57:56.654006Z",
+     "start_time": "2024-10-17T08:57:56.648694Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "ice[\"메로나\"] = 1300\n",
+    "print(ice)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'메로나': 1300, '플로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n"
+     ]
+    }
+   ],
+   "execution_count": 65
   },
   {
    "cell_type": "markdown",
@@ -497,12 +516,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "id": "7RyqlYwpJOp7"
+    "id": "7RyqlYwpJOp7",
+    "ExecuteTime": {
+     "end_time": "2024-10-17T09:02:23.854775Z",
+     "start_time": "2024-10-17T09:02:23.839798Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "names = [\"나이썬\", \"김자바\", \"김씨\", \"박씨샵\"]\n",
+    "grades = [\"B\", \"B\", \"A\", \"C\"]\n",
+    "이름_등급 = dict(zip(names,grades))\n",
+    "print(이름_등급)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'나이썬': 'B', '김자바': 'B', '김씨': 'A', '박씨샵': 'C'}\n"
+     ]
+    }
+   ],
+   "execution_count": 66
   },
   {
    "cell_type": "markdown",
@@ -531,10 +567,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T09:05:58.187835Z",
+     "start_time": "2024-10-17T09:05:58.174025Z"
+    }
+   },
+   "source": [
+    "ice = {\"메로나\" : [300, 20],\n",
+    "       \"비비빅\" : [400, 3],\n",
+    "       \"죠스바\" : [250, 100]}\n",
+    "ice.update({\"보석바\" : [650, 10]})\n",
+    "print(ice)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'메로나': [300, 20], '비비빅': [400, 3], '죠스바': [250, 100], '보석바': [650, 10]}\n"
+     ]
+    }
+   ],
+   "execution_count": 69
   },
   {
    "cell_type": "markdown",
@@ -557,6 +612,33 @@
    ]
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T09:08:02.703234Z",
+     "start_time": "2024-10-17T09:08:02.692979Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "ice = {\"메로나\" : 1000,\n",
+    "       \"폴로포\" : 1200,\n",
+    "       \"빵빠레\" : 1800,\n",
+    "       \"죠스바\" : 1200,\n",
+    "       \"월드콘\" : 1500}\n",
+    "print(ice.keys())"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['메로나', '폴로포', '빵빠레', '죠스바', '월드콘'])\n"
+     ]
+    }
+   ],
+   "execution_count": 71
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -571,8 +653,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T09:39:18.472709Z",
-     "start_time": "2024-10-16T09:39:18.469104Z"
+     "end_time": "2024-10-17T09:53:39.749559Z",
+     "start_time": "2024-10-17T09:53:39.740942Z"
     }
    },
    "source": [
@@ -588,7 +670,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 107
   },
   {
    "cell_type": "markdown",
@@ -610,10 +692,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": "deposit = input('돈을 넣어주세요')"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T09:56:48.195856Z",
+     "start_time": "2024-10-17T09:56:44.578774Z"
+    }
+   },
+   "source": [
+    "deposit_amount = int(input('입금하실 금액을 입력해 주세요.'))\n",
+    "receipts = list()\n",
+    "balance += deposit_amount\n",
+    "receipts1 = (\"입금\", deposit_amount, balance)\n",
+    "print(f'{receipts1[0]}\\n입금 금액 : {receipts1[1]}원\\n현재 잔액 : {receipts1[2]}원')"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입금\n",
+      "입금 금액 : 3000원\n",
+      "현재 잔액 : 3000원\n"
+     ]
+    }
+   ],
+   "execution_count": 113
   },
   {
    "cell_type": "markdown",
@@ -633,10 +736,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T09:56:56.441754Z",
+     "start_time": "2024-10-17T09:56:53.371850Z"
+    }
+   },
+   "source": [
+    "withdraw_amount = int(input('출금하실 금액을 입력해 주세요.'))\n",
+    "withdraw_amount = min(withdraw_amount, balance)\n",
+    "balance -= withdraw_amount\n",
+    "receipts2 = (\"출금\", withdraw_amount, balance)\n",
+    "print(f'{receipts2[0]}\\n출금 금액 : {receipts2[1]}원\\n현재 잔액 : {receipts2[2]}원')"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "출금\n",
+      "출금 금액 : 3000원\n",
+      "현재 잔액 : 0원\n"
+     ]
+    }
+   ],
+   "execution_count": 114
   },
   {
    "cell_type": "markdown",
@@ -651,10 +775,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T09:58:42.848669Z",
+     "start_time": "2024-10-17T09:58:42.841335Z"
+    }
+   },
+   "source": "print(f'{receipts1[0]}\\n입금 금액 : {receipts1[1]}원\\n현재 잔액 : {receipts1[2]}원\\n{receipts2[0]}\\n출금 금액 : {receipts2[1]}원\\n현재 잔액 : {receipts2[2]}원')",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입금\n",
+      "입금 금액 : 3000원\n",
+      "현재 잔액 : 3000원\n",
+      "출금\n",
+      "출금 금액 : 3000원\n",
+      "현재 잔액 : 0원\n"
+     ]
+    }
+   ],
+   "execution_count": 116
+  },
+  {
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
