--- a/pythonProject/쪽지시험_리팩토링.ipynb
+++ b/pythonProject/쪽지시험_리팩토링.ipynb
@@ -21,15 +21,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:55:19.778600Z",
-     "start_time": "2024-10-17T13:55:19.775482Z"
+     "end_time": "2024-10-18T05:39:55.488185Z",
+     "start_time": "2024-10-18T05:39:55.481527Z"
     }
    },
    "cell_type": "code",
    "source": "덩치, 애기 = 1, 2",
    "id": "8e5a1ab9c30b38a7",
    "outputs": [],
-   "execution_count": 151
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -43,13 +43,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:49:49.629614Z",
-     "start_time": "2024-10-17T13:49:49.625854Z"
+     "end_time": "2024-10-18T05:39:57.919041Z",
+     "start_time": "2024-10-18T05:39:57.912164Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "도마뱀_리스트 = [('덩치', 덩치), ('애기', 애기)]\n",
+    "도마뱀_리스트 = [['덩치', 덩치], ['애기', 애기]]\n",
     "print(도마뱀_리스트)"
    ],
    "id": "56d98b86b2f04343",
@@ -58,11 +58,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('덩치', 1), ('애기', 2)]\n"
+      "[['덩치', 1], ['애기', 2]]\n"
      ]
     }
    ],
-   "execution_count": 140
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -78,14 +78,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:49:51.952589Z",
-     "start_time": "2024-10-17T13:49:51.948628Z"
+     "end_time": "2024-10-18T05:40:00.276637Z",
+     "start_time": "2024-10-18T05:40:00.264513Z"
     }
    },
    "cell_type": "code",
    "source": [
     "마고 = 2\n",
-    "도마뱀_리스트.append(('마고', 마고))\n",
+    "도마뱀_리스트.append(['마고', 마고])\n",
     "print(도마뱀_리스트)"
    ],
    "id": "3ec1ef1be2927b78",
@@ -94,11 +94,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('덩치', 1), ('애기', 2), ('마고', 2)]\n"
+      "[['덩치', 1], ['애기', 2], ['마고', 2]]\n"
      ]
     }
    ],
-   "execution_count": 141
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -118,8 +118,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:49:54.109877Z",
-     "start_time": "2024-10-17T13:49:54.106293Z"
+     "end_time": "2024-10-18T05:40:03.565005Z",
+     "start_time": "2024-10-18T05:40:03.557872Z"
     }
    },
    "cell_type": "code",
@@ -137,7 +137,7 @@
      ]
     }
    ],
-   "execution_count": 142
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -151,8 +151,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:49:58.323747Z",
-     "start_time": "2024-10-17T13:49:58.319389Z"
+     "end_time": "2024-10-18T05:40:06.753955Z",
+     "start_time": "2024-10-18T05:40:06.741389Z"
     }
    },
    "cell_type": "code",
@@ -170,7 +170,7 @@
      ]
     }
    ],
-   "execution_count": 143
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -184,8 +184,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:50:01.624905Z",
-     "start_time": "2024-10-17T13:50:01.621152Z"
+     "end_time": "2024-10-18T05:40:09.686706Z",
+     "start_time": "2024-10-18T05:40:09.679399Z"
     }
    },
    "cell_type": "code",
@@ -204,7 +204,7 @@
      ]
     }
    ],
-   "execution_count": 144
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -224,8 +224,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:50:05.133516Z",
-     "start_time": "2024-10-17T13:50:05.129265Z"
+     "end_time": "2024-10-18T05:40:14.573863Z",
+     "start_time": "2024-10-18T05:40:14.565094Z"
     }
    },
    "cell_type": "code",
@@ -240,7 +240,7 @@
      ]
     }
    ],
-   "execution_count": 145
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -256,8 +256,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:51:15.068002Z",
-     "start_time": "2024-10-17T13:51:15.063780Z"
+     "end_time": "2024-10-18T05:40:26.446108Z",
+     "start_time": "2024-10-18T05:40:26.437013Z"
     }
    },
    "cell_type": "code",
@@ -265,13 +265,13 @@
     "덩치 += 1\n",
     "애기 += 1\n",
     "마고 += 1\n",
-    "사육장[\"덩치\"] = 덩치\n",
-    "사육장[\"애기\"] = 애기\n",
-    "사육장[\"마고\"] = 마고"
+    "# 사육장[\"덩치\"] = 덩치\n",
+    "# 사육장[\"애기\"] = 애기\n",
+    "# 사육장[\"마고\"] = 마고"
    ],
    "id": "59cda62e8780ca09",
    "outputs": [],
-   "execution_count": 149
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -286,8 +286,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:51:19.748019Z",
-     "start_time": "2024-10-17T13:51:17.973726Z"
+     "end_time": "2024-10-18T05:40:36.119485Z",
+     "start_time": "2024-10-18T05:40:33.300127Z"
     }
    },
    "cell_type": "code",
@@ -304,11 +304,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "덩치 : 9살, 애기 : 10살, 마고 : 10살\n"
+      "덩치 : 5살, 애기 : 6살, 마고 : 6살\n"
      ]
     }
    ],
-   "execution_count": 150
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -325,15 +325,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T13:50:22.697016Z",
-     "start_time": "2024-10-17T13:50:22.691989Z"
+     "end_time": "2024-10-18T05:40:58.446497Z",
+     "start_time": "2024-10-18T05:40:58.431647Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "사육장[\"덩치\"] = 덩치 + 5\n",
-    "사육장[\"애기\"] = 애기 + 5\n",
-    "사육장[\"마고\"] = 마고 + 5\n",
+    "# 사육장[\"덩치\"] = 덩치 + 5\n",
+    "# 사육장[\"애기\"] = 애기 + 5\n",
+    "# 사육장[\"마고\"] = 마고 + 5\n",
     "사육장_리스트 = list(사육장.items())\n",
     "사육장1 = 사육장_리스트[0]\n",
     "사육장2 = 사육장_리스트[1]\n",
@@ -350,7 +350,7 @@
      ]
     }
    ],
-   "execution_count": 148
+   "execution_count": 15
   },
   {
    "metadata": {},
