--- a/pythonProject/무제 폴더/chapter16.ipynb
+++ b/pythonProject/무제 폴더/chapter16.ipynb
@@ -93,14 +93,17 @@
    "id": "d118a10046b6b36b"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-19T06:40:18.665494Z",
+     "start_time": "2024-10-19T06:40:18.660956Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# 6. while 문에도 else 가 있어요\n",
     "\n",
-    "양파 = 10\n",
+    "양파 = 12\n",
     "while 양파 > 10:\n",
     "    print('양파', 양파, '개 남았습니다.')\n",
     "    if 양파 == 0:\n",
@@ -109,13 +112,28 @@
     "else:\n",
     "    print('양파 다 팔렸습니다.')"
    ],
-   "id": "4c23df95b17d1c18"
+   "id": "4c23df95b17d1c18",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "양파 12 개 남았습니다.\n",
+      "양파 11 개 남았습니다.\n",
+      "양파 다 팔렸습니다.\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-19T06:37:51.034400Z",
+     "start_time": "2024-10-19T06:37:51.029602Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# 7. 반복문에 흐름을 제어하는 continue 와 break\n",
     "\n",
@@ -131,13 +149,45 @@
     "    if i == 10:\n",
     "        break"
    ],
-   "id": "311b348764a11b55"
+   "id": "311b348764a11b55",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-19T06:36:46.204962Z",
+     "start_time": "2024-10-19T06:36:46.171566Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "i = 0\n",
     "while i < 10:\n",
@@ -151,7 +201,26 @@
     "        continue\n",
     "    print(i)"
    ],
-   "id": "cf38f577dfbb5aa4"
+   "id": "cf38f577dfbb5aa4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {},
