--- a/pythonProject/Challenge/DAY5_Challenge.ipynb
+++ b/pythonProject/Challenge/DAY5_Challenge.ipynb
@@ -85,25 +85,16 @@
    "metadata": {
     "id": "dJbcWWlwL0iK",
     "ExecuteTime": {
-     "end_time": "2024-10-19T09:31:40.322608Z",
-     "start_time": "2024-10-19T09:31:40.318566Z"
+     "end_time": "2024-10-22T08:11:54.809110Z",
+     "start_time": "2024-10-22T08:11:54.791573Z"
     }
    },
    "source": [
     "class oz:\n",
-    "    "
+    "    pass"
    ],
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (2445392658.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;36m  Cell \u001B[0;32mIn[24], line 2\u001B[0;36m\u001B[0m\n\u001B[0;31m    \u001B[0m\n\u001B[0m    ^\u001B[0m\n\u001B[0;31mIndentationError\u001B[0m\u001B[0;31m:\u001B[0m expected an indented block\n"
-     ]
-    }
-   ],
-   "execution_count": 24
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
