--- a/pythonProject/Mini_Project_Hangman.ipynb
+++ b/pythonProject/Mini_Project_Hangman.ipynb
@@ -181,47 +181,120 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-21T11:03:11.076468Z",
+     "start_time": "2024-10-21T11:03:09.098758Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "words = [\"apple\", \"banana\", \"orange\", \"grape\", \"lemon\"]\n",
     "\n",
+    "# import random\n",
+    "# chance = 10\n",
+    "# answer = random.choice(words)\n",
     "\n",
-    "answer = random.choice(words)\n",
-    "if answer == \"apple\":\n",
-    "    a = '_' * len(answer)\n",
-    "    b = input('단어를 입력하세요.')\n",
-    "    if b in answer:\n",
-    "        print('단어를 맞추셨군요. 더 힘내봐요')\n",
-    "        a.index[answer.index[b]] = b\n",
+    "chance = 10\n",
+    "answer = \"orange\"\n",
+    "a = '_' * len(answer)\n",
+    "\n",
+    "while chance > 0:\n",
+    "    if a != answer:\n",
+    "        print(a)\n",
+    "        b = input('단어의 한 글자를 입력하세요 : ')\n",
     "        \n",
-    "    else:\n",
-    "        print('틀렸습니다. 남은 시도 횟수 :')\n",
+    "        if b in answer:\n",
+    "            print('단어를 맞추셨군요. 더 힘내봐요')\n",
+    "            c = a.index(b)\n",
+    "            a.index[c] = b\n",
+    "            chance -= 1\n",
+    "            \n",
+    "        else:\n",
+    "            chance -= 1\n",
+    "            print('틀렸습니다. 남은 시도 횟수 :', chance)\n",
+    "            break\n",
+    "            \n",
+    "    else: # 정답을 모두 맞췄을 경우\n",
+    "        print(\"축하합니다! 단어를 모두 맞추어 탈출에 성공하셨습니다.\")\n",
     "        \n",
+    "else:\n",
+    "    print(\"탈출에 실패하여 사망하셨습니다.\")\n",
     "        \n",
-    "        \n",
     "\n",
     "\n",
-    "   '틀렸습니다. 남은 시도 횟수 :'\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "class HangmanGame:\n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "\n",
-    "    def display(self):\n",
-    "        pass\n",
-    "    def play(self):\n",
-    "        pass\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    game = HangmanGame()\n",
-    "    game.play()"
-   ]
+    "# class HangmanGame:\n",
+    "#     def __init__(self):\n",
+    "#         pass\n",
+    "# \n",
+    "#     def display(self):\n",
+    "#         pass\n",
+    "#     def play(self):\n",
+    "#         pass\n",
+    "# \n",
+    "# if __name__ == \"__main__\":\n",
+    "#     game = HangmanGame()\n",
+    "#     game.play()"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "______\n",
+      "단어를 맞추셨군요. 더 힘내봐요\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[22], line 18\u001B[0m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m b \u001B[38;5;129;01min\u001B[39;00m answer:\n\u001B[1;32m     17\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m단어를 맞추셨군요. 더 힘내봐요\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m---> 18\u001B[0m     c \u001B[38;5;241m=\u001B[39m \u001B[43ma\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mindex\u001B[49m\u001B[43m(\u001B[49m\u001B[43mb\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     19\u001B[0m     a\u001B[38;5;241m.\u001B[39mindex[c] \u001B[38;5;241m=\u001B[39m b\n\u001B[1;32m     20\u001B[0m     chance \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n",
+      "\u001B[0;31mValueError\u001B[0m: substring not found"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-21T10:48:52.771168Z",
+     "start_time": "2024-10-21T10:48:52.752979Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a = \"apple\"\n",
+    "b = \"_\" * len(a)\n",
+    "print(a.index(\"p\"))\n",
+    "b.index[a.index(\"p\")] = \"p\"\n",
+    "print(b)\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'builtin_function_or_method' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[15], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m b \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m_\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;28mlen\u001B[39m(a)\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(a\u001B[38;5;241m.\u001B[39mindex(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mp\u001B[39m\u001B[38;5;124m\"\u001B[39m))\n\u001B[0;32m----> 4\u001B[0m \u001B[43mb\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mindex\u001B[49m\u001B[43m[\u001B[49m\u001B[43ma\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mindex\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mp\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mp\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28mprint\u001B[39m(b)\n",
+      "\u001B[0;31mTypeError\u001B[0m: 'builtin_function_or_method' object does not support item assignment"
+     ]
+    }
+   ],
+   "execution_count": 15
   }
  ],
  "metadata": {
@@ -230,8 +303,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "name": "python3"
+   "display_name": "Python 3 (ipykernel)",
+   "name": "python3",
+   "language": "python"
   },
   "language_info": {
    "name": "python"
