--- a/pythonProject/Challenge/DAY7_Challenge/task_4.ipynb
+++ b/pythonProject/Challenge/DAY7_Challenge/task_4.ipynb
@@ -12,42 +12,40 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-22T08:09:50.651947Z",
-     "start_time": "2024-10-22T08:09:50.645761Z"
+     "end_time": "2024-10-22T17:47:54.736477Z",
+     "start_time": "2024-10-22T17:47:51.269329Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "a = 3\n",
-    "b = 'abc'\n",
-    "print('a =', a)\n",
-    "print('b =', b)\n",
+    "class NegativeNumberError(Exception):\n",
+    "    pass\n",
     "\n",
-    "a, b = b, a\n",
-    "print('a =', a)\n",
-    "print('b =', b)"
+    "def input_num():\n",
+    "    try:\n",
+    "        number = int(input(\"숫자를 입력하세요.\"))\n",
+    "        if number < 0:\n",
+    "            raise NegativeNumberError\n",
+    "        print(f'입력된 숫자는 {number} 입니다.')\n",
+    "        \n",
+    "    except NegativeNumberError:\n",
+    "        print('양수를 입력해 주세요.')\n",
+    "    \n",
+    "    except ValueError:\n",
+    "        print('잘못 입력하셨습니다. 숫자를 입력해주세요.')\n",
+    "        \n",
+    "input_num()"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = 3\n",
-      "b = abc\n",
-      "a = abc\n",
-      "b = 3\n"
+      "양수를 입력해 주세요.\n"
      ]
     }
    ],
-   "execution_count": 2
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "1. 컴프리헨션 작동원리\n",
-    "2. 파이썬에서 자주 사용되는 내장함수 하루에 하나씩 공부하기"
-   ]
+   "execution_count": 4
   }
  ],
  "metadata": {
