--- a/pythonProject/Challenge/DAY7_Challenge/task_6.ipynb
+++ b/pythonProject/Challenge/DAY7_Challenge/task_6.ipynb
@@ -12,14 +12,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T17:32:52.510586Z",
+     "start_time": "2024-10-22T17:32:22.293089Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import requests\n",
+    "\n",
+    "response = requests.get('https://kream.co.kr/')\n",
+    "print(\"상태 코드:\", response.status_code)\n",
+    "print(\"HTML 내용 (첫 100자):\\n\", response.text[:100])"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "상태 코드: 500\n",
+      "HTML 내용 (첫 100자):\n",
+      " <!DOCTYPE html>\n",
+      "<html lang=\"ko\">\n",
+      "<head>\n",
+      "<meta name=\"robots\" content=\"noindex, nofollow\" />\n",
+      "<meta htt\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
   "language_info": {
    "name": "python"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
   }
  },
  "nbformat": 4,
