--- a/pythonProject/Challenge/DAY7_Challenge/task_9.ipynb
+++ b/pythonProject/Challenge/DAY7_Challenge/task_9.ipynb
@@ -18,11 +18,46 @@
     "└── birds.py\n",
     "```\n"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T17:54:09.522676Z",
+     "start_time": "2024-10-22T17:54:09.518170Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from animals.mammals import Dog\n",
+    "from animals.birds import Eagle\n",
+    "\n",
+    "dog = Dog()\n",
+    "eagle = Eagle()\n",
+    "\n",
+    "print(dog.sound())\n",
+    "print(eagle.sound())"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "왈왈\n",
+      "짹쨱..?\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
   "language_info": {
    "name": "python"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
   }
  },
  "nbformat": 4,
