--- a/pythonProject/Challenge/DAY7_Challenge/task_2.ipynb
+++ b/pythonProject/Challenge/DAY7_Challenge/task_2.ipynb
@@ -13,34 +13,30 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-22T09:19:19.018347Z",
-     "start_time": "2024-10-22T09:19:19.001667Z"
+     "end_time": "2024-10-22T17:42:39.517519Z",
+     "start_time": "2024-10-22T17:42:39.512359Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from myfile import a\n",
-    "\n",
-    "\n",
-    "print(myfile.a)\n",
-    "\n",
-    "# except FileNotFoundError:\n",
-    "#     print(\"파일을 찾을 수 없습니다.\")"
+    "try:\n",
+    "    with open('myfile.txt', 'r') as f:\n",
+    "        print(f.read())\n",
+    "        \n",
+    "except FileNotFoundError:\n",
+    "    print('파일을 찾을 수 없습니다.')"
    ],
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'a' from 'myfile' (/Users/lolll/Desktop/oz_assignment/pythonProject/Challenge/DAY7_Challenge/myfile.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[17], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mmyfile\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m a\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28mprint\u001B[39m(myfile\u001B[38;5;241m.\u001B[39ma)\n\u001B[1;32m      6\u001B[0m \u001B[38;5;66;03m# except FileNotFoundError:\u001B[39;00m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;66;03m#     print(\"파일을 찾을 수 없습니다.\")\u001B[39;00m\n",
-      "\u001B[0;31mImportError\u001B[0m: cannot import name 'a' from 'myfile' (/Users/lolll/Desktop/oz_assignment/pythonProject/Challenge/DAY7_Challenge/myfile.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요 수강생 여러분!! \n",
+      "이 파일을 읽어주시면 됩니다. \n"
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 19
   }
  ],
  "metadata": {
