--- a/pythonProject/Challenge/DAY7_Challenge/task_7.ipynb
+++ b/pythonProject/Challenge/DAY7_Challenge/task_7.ipynb
@@ -10,16 +10,66 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T17:23:03.615149Z",
+     "start_time": "2024-10-22T17:23:01.104868Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "source": [
+    "import time\n",
+    "\n",
+    "def timer_decorator(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start = time.time() # 시작 시간 기록\n",
+    "        result = func(*args, **kwargs) # 함수 실행\n",
+    "        end = time.time() # 종료 시간 기록\n",
+    "        execution_time = end - start # 실행 시간 계산\n",
+    "        print(f'함수 실행 시간 : {execution_time:.2f}초')\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "@timer_decorator\n",
+    "def slow_function():\n",
+    "    print('함수가 실행 중 입니다.')\n",
+    "    time.sleep(2)\n",
+    "    print('함수가 끝났습니다.')\n",
+    "    \n",
+    "@timer_decorator\n",
+    "def fast_function():\n",
+    "    print('빠른 함수 실행 중 입니다.')\n",
+    "    time.sleep(0.5)\n",
+    "    print('빠른 함수가 끝났습니다.')\n",
+    "    \n",
+    "slow_function()\n",
+    "fast_function()"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "함수가 실행 중 입니다.\n",
+      "함수가 끝났습니다.\n",
+      "함수 실행 시간 : 2.00초\n",
+      "빠른 함수 실행 중 입니다.\n",
+      "빠른 함수가 끝났습니다.\n",
+      "함수 실행 시간 : 0.50초\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
   "language_info": {
    "name": "python"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
   }
  },
  "nbformat": 4,
